<resources>
    <string name="app_name">Practice Todo App</string>

    <string name="action_settings">Settings</string>
    <string name="action_delete_test">Deletion test</string>
    <string name="action_test_something">Test something else</string>
    <string name="no_due_date">No due date</string>
    <string name="none">None</string>
    <string name="select_date">Select date</string>
    <string name="select_due_date">Select due date</string>
    <string name="pref_sort_by_key" translatable="false">Sort by</string>
    <string name="sort_by">Sort by</string>
    <string name="due_date">Due date</string>
    <string name="pref_priority_key" translatable="false">Priority</string>
    <string name="priority">Priority</string>
    <string name="high">High</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high_priority">High priority</string>
    <string name="low_priority">Low priority</string>
    <string name="medium_priority">Medium priority</string>
    <string name="completed">Completed</string>
    <string name="intent_adding_or_editing_key" translatable="false">Adding or editing</string>
    <string name="intent_todo_key" translatable="false">Todo</string>
    <string name="add_new_task">Add New Task</string>
    <string name="edit_task">Edit Task</string>
    <string name="add_task">Add Task</string>
    <string name="update_task">Update Task</string>
    <string name="describe_your_task">Describe your task</string>
    <string name="description_cannot_be_empty">Task description cannot be empty.</string>

    <!--for onSaveInstanceState in AddOrEditTodoActivity-->
    <string name="task_description_key" translatable="false">task description</string>
    <string name="priority_key" translatable="false">priority</string>
    <string name="no_due_date_key" translatable="false">no due date</string>
    <string name="year_key" translatable="false">year</string>
    <string name="month_key" translatable="false">month</string>
    <string name="day_key" translatable="false">day</string>
    <string name="completed_key" translatable="false">completed</string>
    <string name="add_or_edit_key" translatable="false">add or edit</string>
    <string name="id_key" translatable="false">id</string>

    <!--for the App Widget-->
    <string name="complete_or_edit_task">Complete or Edit Task?</string>
    <string name="task_done">Task Done</string>
    <string name="cancel">Cancel</string>
    <string name="completion">Completion</string>

    <!--for Notifications-->
    <string name="main_notification_channel_name" translatable="false">Primary</string>
    <string name="due_and_overdue_tasks">Due and overdue tasks</string>
    <string name="you_have_tasks_due_today">You have %d tasks due today.</string>
    <string name="you_have_overdue_tasks">You have %d overdue tasks.</string>
    <string name="you_have_tasks_due_today_and_overdue_tasks">You have %d tasks due today, and %d overdue tasks.</string>

    <!--Additional accessibility contentDescriptions (some just use existing strings above)-->
    <string name="high_priority_task_red_star">Red star for high priority task</string>
    <string name="medium_priority_task_orange_star">Orange star for medium priority task</string>
    <string name="low_priority_task_yellow_star">Yellow star for low priority task</string>
    <string name="completed_task_grey_star">Grey star for completed task</string>

</resources>
