<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.TodoListActivity">
    <item
            android:id="@+id/action_settings"
            android:orderInCategory="100"
            android:title="@string/action_settings"
            app:showAsAction="never" />
    <item
            android:id="@+id/action_delete_test"
            android:orderInCategory="200"
            android:title="@string/action_delete_test"
            app:showAsAction="never" />

    <item
            android:id="@+id/action_test_something"
            android:orderInCategory="300"
            android:title="@string/action_test_something"
            app:showAsAction="never" />
</menu>